# agents-aea

./: .coveragerc  .dockerignore  .firebaserc  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .pylintrc  .spelling  > figure address >  AUTHORS.md  AUTHORS.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DEVELOPING.md  HISTORY.md  HISTORY.rst  Jenkinsfile  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  TODO  aea-config.yaml  doc on workflow with Jira and GH?  fet_private_key_1.txt  fet_private_key_2.txt  fetchai_private_key.txt  fund.py  install_packages.py  mkdocs.yml  mypy.ini  path_to_db  protocol.yaml  protolint.yaml  pyproject.toml  (+14 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
AnotherAgnet/: aea-config.yaml
DC/: aea-config.yaml
Diar2mid/: aea-config.yaml
Diarmid/: aea-config.yaml
Diarmid2/: aea-config.yaml
Diarmid_agent/: aea-config.yaml
Moo_aea/: aea-config.yaml
NewOne/: aea-config.yaml
Richard_agent/: aea-config.yaml
Test/: aea-config.yaml
Test3/: aea-config.yaml
Test_aea/: aea-config.yaml
add/: aea-config.yaml
aea/: __init__.py  __main__.py  __version__.py  abstract_agent.py  aea.py  aea_builder.py  agent.py  agent_loop.py  common.py  exceptions.py  launcher.py  manager.py  multiplexer.py  py.typed  runner.py  runtime.py
agent/: aea-config.yaml
alice/: aea-config.yaml  eth_private_key.txt  fet_private_key.txt
asd/: aea-config.yaml
asdasd/: aea-config.yaml
asdsd/: aea-config.yaml
asdsdasdsdda/: aea-config.yaml
benchmark/: Dockerfile  README.md  benchmark-debug-deployment.yaml  benchmark-deployment.yaml  configmap-run-benchmark.yaml  debian-nginx-pod.yaml  run_benchmark.sh  run_from_branch.sh  run_mem_check_in_cloud.sh
deploy-image/: Dockerfile  README.md  build.sh  docker-env.sh  entrypoint.sh  scripts
develop-image/: Dockerfile  Dockerfile_local  README.md  docker-env.sh  skaffold.yaml
diarmid_aea/: aea-config.yaml
docs/: .spelling  12-factor.md  Pipfile  acn-internals.md  acn.md  aea-vs-mvc.md  aeas.md  aev-echo-demo.md  aev_echo_demo.md  agent-oriented-approach.md  agent-oriented-development.md  agent-vs-aea.md  aggregation-demo.md  app-areas.md  application.md  architecture.md  aries-cloud-agent-demo.md  aries-cloud-agent-example.md  aries-cloud-agent.md  aries_cloud_agent.md  blockchain-oef-usage.md  build-aea-programmatically.md  build-aea-step-by-step.md  buy-sell.md  car-park-alt.md  car-park-skills.md  car-park.md  cli-and-programmaticaly-aeas-interacting.md  cli-commands.md  cli-gui.md  cli-how-to.md  cli-vs-programmatic-aeas.md  cli_overview.md  config.md  connect-a-database.md  connect-a-frontend.md  connect-a-stream-of-data.md  connection.md  contract.md  core-components-1.md  (+96 more)
docs-image/: Dockerfile
dzfc/: aea-config.yaml
examples/: __init__.py  programmatic.py  tac.sh  tac_local.sh
faber/: aea-config.yaml  eth_private_key.txt  fet_private_key.txt
m/: aea-config.yaml
m_agent/: aea-config.yaml  default_private_key.pem  eth_private_key.txt  fet_private_key.txt
m_participant_1/: aea-config.yaml  eth_private_key.txt  fet_private_key.txt
m_participant_2/: aea-config.yaml  eth_private_key.txt  fet_private_key.txt
m_weather_agent/: aea-config.yaml  default_private_key.pem  eth_private_key.txt  fet_private_key.txt
ma/: aea-config.yaml
my_aea/: aea-config.yaml  cosmos_private_key.txt  eth_private_key.txt  fet_private_key.txt
my_agent/: aea-config.yaml  default_private_key.pem  eth_private_key.txt  fet_private_key.txt
my_new_agent/: aea-config.yaml  default_private_key.pem  eth_private_key.txt  fet_private_key.txt
my_test/: aea-config.yaml
myagent/: aea-config.yaml
new_env/: pyproject.toml  test.py
pdf/: aea-config.yaml
scripts/: NOTES.md  RELEASE_PROCESS.md  __init__.py  bump_aea_version.py  bump_year.sh  check_copyright_notice.py  check_doc_ipfs_hashes.py  check_doc_links.py  check_imports_and_dependencies.py  check_ipfs_hashes_pushed.py  check_package_dependencies.py  check_package_versions_in_docs.py  check_packages.py  check_pipfile_and_toxini.py  common.py  create_symlink_crossplatform.sh  deploy_to_registry.py  extend_public_ids.py  fetchai_wealth_generation.py  fix_doc_ipfs_hashes.py  freeze_dependencies.py  generate_all_protocols.py  generate_api_docs.py  generate_ipfs_hashes.py  generate_package_list.py  generate_private_key.py  handler_config.py  (+15 more)
(+2666 files in other folders)
