[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "aea"
version = "1.2.1"
description = "Autonomous Economic Agent framework"
authors = ["Fetch.AI Limited"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/fetchai/agents-aea"
classifiers = [
    "Environment :: Console",
    "Environment :: Web Environment",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: System",
]

[tool.poetry.scripts]
aea = 'aea.cli:cli'

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
base58 = ">=1.0.3,<3.0.0"
jsonschema = "^4.0.0"
packaging = "^21.0"
semver = ">=2.9.1,<3.0.0"
protobuf = ">=3.19.0,<=3.19.4"
pymultihash = "==0.8.2"
pyyaml = ">=4.2b1,<6.0"
requests = ">=2.22.0,<3.0.0"
python-dotenv = ">=0.14.0,<0.18.0"
ecdsa = ">=0.15,<0.17.0"
importlib-metadata  = ">4,<5"

pywin32 = { version = "==303", markers = "sys_platform == 'win32' or platform_system == 'Windows'" }

# cli, test_tools extras
click = { version = "^8.0.0", optional = true }


[tool.poetry.extras]
cli = ["click"]
all = ["click"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
tox = "^3.26"
py-sr25519-bindings = "^0.1.5"
cosmpy = ">=0.5.0,<0.6.0"
pylint = "==2.15.5"
bandit = "==1.7.4"
vulture = "==2.6"
isort = "==5.10.1"
safety = "==2.3.1"
mypy = "==0.982"
darglint = "==1.8.1"
flake8 = "==5.0.4"
flake8-bugbear = "==22.10.25"
flake8-docstrings = "==1.6.0"
flake8-eradicate = "==1.4.0"
flake8-isort = "==5.0"
liccheck = "==0.7.2"
black = "^22.10"


[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.0"
pytest-cov = "^4.0.0"
pytest-custom-exit-code = "^0.3.0"
pytest-randomly = "^3.12.0"
pytest-rerunfailures = "^10.2"
docker = "^4.2.2"
pexpect = "^4.8.0"
sqlalchemy = ">=1.4.41"             # used in one test
mistune = "^2.0.4"
requests = "^2.28.0"
web3 = ">=5.31.0,<6.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8.5.7"
mkdocs-mermaid-plugin = { git = "https://github.com/pugong/mkdocs-mermaid-plugin.git" }
pydoc-markdown = "^4.6.3"
pydocstyle = "^6.1.1"
pymdown-extensions = "^9.7"
pygments = ">=2.7.4"

[tool.poetry.group.packages]
optional = true

[tool.poetry.group.packages.dependencies]
tensorflow = [{ version = "^2.9.2", python = "<3.11" }]
# openapi-core = "==0.13.2"  # problematic package for poetry. requirede by http server connection
openapi-spec-validator = "==0.2.8" # required by openapi core and best to pin it here
gym = "^0.26.2"
aiohttp = "^3.8"
aioprometheus = ">=20.0.0,<21.0.0"
numpy = ">=1.18.1"
oef = ">=0.8.1"
defusedxml = ">=0.7.1"
scikit-image = ">=0.17.2"
colorlog = ">=4.1.0"
temper-py = "==0.0.3"


[tool.poetry.group.tools]
optional = true

[tool.poetry.group.tools.dependencies]
#benchmark
matplotlib = ">=3.3.0,<3.4"
psutil = "^5.9.3"
memory-profiler = ">=0.57.0"
# scripts
gitpython = "==3.1.14"
ipfshttpclient = "==0.8.0a2"


[tool.poetry.group.types.dependencies]
# types defenitions for mypy
types-certifi = "*"
types-requests = "*"
types-setuptools = "*"
types-urllib3 = "*"
types-click = "*"
types-PyYAML = "*"
