[tool.poetry]
name = "new-env"
version = "0.1.0"
description = ""
authors = ["8baller <tomrae030@hotmail.com>"]
readme = "README.md"
packages = [{include = "new_env"}]

[tool.poetry.dependencies]
python = "^3.10"
open-aea-ledger-solana = {path = "../plugins/aea-ledger-solana"}
open-aea-ledger-ethereum-hwi = {path = "../plugins/aea-ledger-ethereum-hwi"}
open-aea-ledger-ethereum = "^1.31.0"
open-aea-ledger-cosmos = "^1.31.0"

open-aea = "^1.31.0"
open-autonomy = "^0.10.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
